# competitions

nexco_20240206/: .gitignore  README.md  pyproject.toml
smbc_20231201/: .gitignore  README.md  pyproject.toml
smbc_20231201/src/conf/: config.py
smbc_20231201/src/utils/: load_datas.py
sony_20231120/: .gitignore  README.md  pyproject.toml
sony_20231120/src/conf/: config.py
sony_20231120/src/datasets/dices/: dice_1.npy  dice_2.npy  dice_3.npy  dice_4.npy  dice_5.npy  dice_6.npy
sony_20231120/src/notebooks/: base_line.ipynb  eda.ipynb  yolo_model_1.ipynb
sony_20231120/src/util/: __init__.py  load_datasets.py  make_datasets.py  preprocess.py  visualize.py
sony_20231120/src/utils/: __init__.py  make_datasets.py  preprocess.py  visualize.py
