[project]
name = "smbc-20231201"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "h-hosoda-ml", email = "h.hosoda.ml@gmail.com" }
]
dependencies = [
    "tqdm>=4.66.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "matplotlib>=3.7.4",
    "scipy>=1.10.1",
    "scikit-learn>=1.3.2",
    "jupyter>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
