[project]
name = "sony-20231120"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "h-hosoda-ml", email = "h.hosoda.ml@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "matplotlib>=3.7.3",
    "scikit-learn>=1.3.2",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "jupyter>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
